Update Swift version to 5.10.1 in test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,23 +25,16 @@ jobs:
       fail-fast: false
       matrix:
         swiftver:
-          - swift:5.7
+          - swift:5.10.1
         swiftos:
-          - xenial
-          - bionic
+          - jammy
+          - mantic
           - focal
-          - centos7
-          - centos8
+          - rhel-ubi9⁠
           - amazonlinux2
     container: ${{ format('{0}-{1}', matrix.swiftver, matrix.swiftos) }}
     runs-on: ubuntu-latest
     steps:
-      - name: SPM is incompatible with CentOS 7
-        if: ${{ matrix.swiftos == 'centos7' }}
-        run: |
-          yum install -y make libcurl-devel
-          git clone https://github.com/git/git -bv2.28.0 --depth 1 && cd git
-          make prefix=/usr -j all install NO_OPENSSL=1 NO_EXPAT=1 NO_TCLTK=1 NO_GETTEXT=1 NO_PERL=1
       - name: Check out code
         uses: actions/checkout@v2
       - name: Run tests with Thread Sanitizer
